--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
     "@vueuse/core": "^10.7.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^3.0.6",
-    "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.3.0"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.0",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
-    "vitest": "^1.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.1.0",
-    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0"
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
   }
-} 
+}
