--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^10.7.0",
     "chart.js": "^4.5.0",
     "date-fns": "^3.0.6",
+    "firebase": "^10.14.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.0",
     "vue-chartjs": "^5.3.2",
